⚒ Fix various date issue (#56)
- Fix the serachGamesById declares twice
- Fix the ET times that shows empty because it set to be empty
  - when it's 2 days ahead of the schedule
- Fix box score time text too large on mobile view
- Fix go to yesterday shows the same date (date wasn't set properly)
- Fix box scores won't show correct date when a non-today game's selected
  - It refreshes back to current date
- Fix update the schedule timing correctly
- Fix guarding the broadcast when there is no broadcast field
  - Happens when incorrectly updated the schedule

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -626,6 +626,7 @@ table tr:first-child th:last-child {
         flex-direction: column;
     }
 
+    .c-table .c-time,
     .box-banner {
         font-size: calc(12px + 1vw);
     }
